[package]
name = "frfft1d"
description = "This is an implementation of the one dimensional discrete fractional fourier transform."
version = "0.2.0"
license = "MIT"
authors = ["Laszlo Korte"]
edition = "2021"
repository ="https://github.com/laszlokorte/rust-frfft1d"

[dependencies]
itertools = "0.12.1"
rustfft = "6.2.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
